# Godly-AI

./: .gitignore  .pre-commit-config.yaml  COMPREHENSIVE_TESTING_SUMMARY.md  CONTRIBUTING.md  INTRINSIC_MOTIVATION_SUMMARY.md  MONITORING_IMPLEMENTATION_SUMMARY.md  README.md  STORAGE_IMPLEMENTATION_SUMMARY.md  jit_benchmark_results.json  mkl_benchmark_results.json  pyproject.toml  requirements.txt
benchmarks/: jit_performance_benchmark.py  mkl_performance_benchmark.py
benchmarks/agentic/: .gitkeep
benchmarks/learning/: .gitkeep
benchmarks/memory/: .gitkeep
benchmarks/speed/: .gitkeep
config/: default.yaml
config/deployment/: .gitkeep
config/models/: .gitkeep
config/training/: .gitkeep
data/experiments/: .gitkeep
data/models/: .gitkeep
data/processed/: .gitkeep
data/raw/: .gitkeep
docs/: architecture.md
docs/architecture/: .gitkeep
docs/components/: evolution.md  intrinsic_motivation.md  memory_systems.md  meta_learning.md  neural_core.md  reasoning_cores.md
docs/monitoring/: README.md  learning_tracker.md  system_monitor.md  visualization.md
docs/performance/: README.md  jit_compilation.md  mkl_optimization.md  parallel_processing.md
docs/research/: .gitkeep
docs/storage/: README.md  hdf5_storage.md  redis_storage.md  sqlite_storage.md
docs/tutorials/: .gitkeep
examples/: cross_modal_sync_demo.py  meta_memory_demo.py  monitoring_demo.py  multi_modal_reasoning_demo.py  performance_optimization_demo.py  semantic_memory_demo.py
scripts/evaluation/: .gitkeep
scripts/setup/: .gitkeep  install.py
scripts/training/: .gitkeep
src/: __init__.py
src/agents/: __init__.py
src/core/: __init__.py  liquid_state_machine.py
src/interface/: __init__.py
src/memory/: __init__.py
src/monitoring/: __init__.py  learning_tracker.py  system_monitor.py  visualization.py
src/performance/: __init__.py  jit_compilation.py  mkl_optimization.py  parallel_processing.py
src/storage/: __init__.py  hdf5_storage.py  redis_storage.py  sqlite_storage.py
src/training/: __init__.py
tests/: __init__.py  test_cross_modal_sync.py  test_curiosity_exploration.py  test_episodic_memory.py  test_goal_emergence_planning.py  test_hdf5_storage.py  test_internal_reward_system.py  test_jit_compilation.py  test_learning_tracker.py  test_lif_neuron.py  test_liquid_state_machine.py  test_meta_learning_core.py  test_meta_memory.py  test_mkl_optimization.py  test_parallel_processing.py  test_project_structure.py  test_reasoning_cores.py  test_self_modification.py  test_semantic_memory.py  test_sqlite_storage.py  test_stdp.py  test_system_monitor.py  test_topology_evolution.py  test_unsupervised_learning.py  test_visualization.py  test_working_memory.py
tests/integration/: __init__.py  test_end_to_end_learning.py  test_multi_component_interaction.py
tests/performance/: __init__.py
tests/unit/: __init__.py  test_coverage_runner.py  test_enhanced_memory.py  test_enhanced_neurons.py  (+1 more)
(+62 files in other folders)
